  * softwarecenter/db/database.py, test/test_appstore.py:
    - fix locking and add regression test, thanks to Matthew McGowan
      for the research into this
  * softwarecenter/db/reviews.py:
    - fix support for reviews in not enabled PPAs (like for-pay PPAs)
      LP: #731376
  * softwarecenter/backend/rnrclient_pristine.py:
    - updated to match latest upstream version

  [ Kiwinote ]
  * clean up mimetype handling (allows us to accept apturls once again)
  * softwarecenter/backend/channel.py:
    - don't return two copies of one channel with different names
    - channel query is based on XOO rather than XOL
  * softwarecenter/backend/restfulclient.py:
    - import time on demand, this avoids an attribute error
  * softwarecenter/db/application.py:
    - avoid using unicode(None)
  * softwarecenter/view/softwarepane.py:
    - revert to correct sortmode once searchterm has been cleared
    
  [ Aaron Peachey ]
  * softwarecenter/db/reviews.py:
    - add functionality to keep track of review usefulness votes locally
  * softwarecenter/view/widgets/reviews.py:
    - different behaviour for review display if user has already 
      votedon usefulness (LP: #730768)
  
  [ Gary Lasker ]
  * test/test_unity_launcher_integration.py:
    - add unit test for Unity launcher integration feature 

 -- Gary Lasker <gary.lasker@canonical.com>  Fri, 11 Mar 2011 01:05:55 -0500
 
software-center (3.1.23.1) natty; urgency=low

  * softwarecenter/db/reviews.py:
    - fix crash when submitting new review

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Mar 2011 20:40:10 +0100

software-center (3.1.23) natty; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - fix broken downloadable icon code, improve error checking
    - update Unity launcher integration code per recent detailsview
      changes
  * softwarecenter/view/widgets/backforward.py:
    - remove the additional border space in the navigation bar
      (LP: #729053) 