@@ -9,6 +9,7 @@
     <property name="window_position">center-on-parent</property>
     <property name="default_width">400</property>
     <property name="destroy_with_parent">True</property>
+    <property name="icon">softwarecenter</property>
     <child>
       <object class="GtkVBox" id="dialog-vbox3">
         <property name="visible">True</property>
