@@ -9,8 +9,9 @@
     <property name="default_width">400</property>
     <property name="default_height">500</property>
     <property name="destroy_with_parent">True</property>
-    <signal name="size_allocate" handler="on_submit_window_size_allocate" swapped="no"/>
-    <signal name="state_changed" handler="on_submit_window_state_changed" swapped="no"/>
+    <property name="icon_name">softwarecenter</property>
+    <signal name="size_allocate" handler="on_submit_window_size_allocate"/>
+    <signal name="state_changed" handler="on_submit_window_state_changed"/>
     <child>
       <object class="GtkVBox" id="dialog-vbox4">
         <property name="visible">True</property>
@@ -304,8 +305,8 @@
                   <object class="GtkLabel" id="label_legal_fineprint">
                     <property name="visible">True</property>
                     <property name="xalign">0</property>
-                    <property name="wrap">True</property>
                     <property name="justify">fill</property>
+                    <property name="wrap">True</property>
                     <property name="wrap_mode">word-char</property>
                   </object>
                   <packing>
@@ -400,7 +401,7 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="use_stock">True</property>
-                        <signal name="clicked" handler="on_button_cancel_clicked" swapped="no"/>
+                        <signal name="clicked" handler="on_button_cancel_clicked"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -416,7 +417,7 @@
                         <property name="sensitive">False</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <signal name="clicked" handler="on_button_post_clicked" swapped="no"/>
+                        <signal name="clicked" handler="on_button_post_clicked"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
