@@ -11,6 +11,8 @@ software-center (3.1.23.2) UNRELEASED; urgency=low
       LP: #731376
   * softwarecenter/backend/rnrclient_pristine.py:
     - updated to match latest upstream version
+  * data/ui/submit_review.ui, data/ui/report_abuse.ui:
+    - set softwarecenter icon (thanks to davmor2 for reporting)
 
   [ Kiwinote ]
   * clean up mimetype handling (allows us to accept apturls once again)
